--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ blinker==1.4
 Click==7.0
 Flask==1.0.2
 Flask-DebugToolbar==0.10.1
+Flask-HTTPAuth==3.2.4
 Flask-Login==0.4.1
 Flask-Migrate==2.4.0
 Flask-Script==2.0.6
