--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 alembic==1.0.10
 blinker==1.4
+certifi==2019.3.9
+chardet==3.0.4
 Click==7.0
+entrypoints==0.3
 Flask==1.0.2
 Flask-DebugToolbar==0.10.1
 Flask-HTTPAuth==3.2.4
@@ -9,15 +12,21 @@ Flask-Migrate==2.4.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 Mako==1.0.10
 MarkupSafe==1.1.1
+mccabe==0.6.1
 pkg-resources==0.0.0
 psycopg2==2.8.2
+pycodestyle==2.5.0
+pyflakes==2.1.1
 python-dateutil==2.8.0
 python-editor==1.0.4
+requests==2.22.0
 six==1.12.0
 SQLAlchemy==1.3.3
+urllib3==1.25.2
 Werkzeug==0.15.2
 WTForms==2.2.1
